website/src/components/Editor.module.css
.editorAndPreviewWrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  gap: 1rem;
  container: editor / size;
}

.editorControlWrapper {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto minmax(0, 1fr);
  gap: 1rem;
  overflow-y: auto;
}

.editor {
  width: 100%;
  overflow-y: auto;
  min-height: 0px;
  max-width: 100%;
}

.previewWrapper {
  padding: 1rem;
  overflow-y: auto;
  display: grid;
  min-height: 0px;
  grid-template-rows: auto minmax(0, 1fr);
}

/* Required for scrolling the preview and source screens. */
@container editor (min-height: 0) {
  .previewWrapper {
    height: 100cqh;
  }
}

.resultContainer {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto minmax(0, 1fr) auto;
  min-height: 0px;
}

.resultContainer:is(
    :has(.markdownBody:nth-of-type(2)),
    :has(.markdownSource:nth-of-type(2))
  ) {
  grid-template-rows: auto auto minmax(0, 1fr) auto minmax(0, 1fr);
}

.markdownBody {
  overflow: auto;
  min-height: 0px;

  /* Minimal styling for Markdown previews */
  table {
    border-collapse: collapse;
  }

  td,
  th {
    border: 1px solid;
    padding: 0.5em;
  }

  pre {
    background-color: #aaaaaa33;
    padding: 1em;
    border-radius: 0.2em;
  }

  :not(pre) > code {
    padding: 0.2em;
    border-radius: 0.4em;
    background-color: #bbbbbb66;
    font-size: 0.9em;
  }
}

.markdownSource {
  margin: 0px;
  overflow: auto;
  min-height: 0px;
}

.controls {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
}

a.gitHubLink:any-link {
  text-decoration: none;
  color: inherit;
}

.gitHubLink {
  display: inline-flex;
  align-items: center;
}

:root {
  --bg-color-diff-added: light-dark(#cafbd5, #27662a);
  --bg-color-diff-removed: light-dark(#fcc4c9, #7c2421);
  --bg-color-diff-modified: light-dark(#fff4c9, #7c5a21);
}

.legendAdded {
  background-color: var(--bg-color-diff-added);
}
.legendRemoved {
  background-color: var(--bg-color-diff-removed);
}
.legendModified {
  background-color: var(--bg-color-diff-modified);
}

.markdownSourceDiff {
  :is(ins, del) {
    text-decoration: inherit;
  }

  ins {
    background-color: var(--bg-color-diff-added);
  }
  del {
    background-color: var(--bg-color-diff-removed);
  }
}

.markdownDiff {
  :is(h1, h2, h3, h4, h5, h6, p, li, tr, pre):where(
      :not(
          :has(
              :global(.vdd-added),
              :global(.vdd-removed),
              :global(.vdd-modified)
            )
        )
    ) {
    opacity: 0.4;
  }
  :global(.vdd-added) {
    background-color: var(--bg-color-diff-added);
    text-decoration: inherit;
  }
  :global(.vdd-removed) {
    background-color: var(--bg-color-diff-removed);
    text-decoration: inherit;
  }
  :global(.vdd-modified) {
    background-color: var(--bg-color-diff-modified);
    text-decoration: inherit;
  }
}

